--- a/irat_qnet/results/animal_predictions/phylotree_for_risky_strains-final.ipynb
+++ b/irat_qnet/results/animal_predictions/phylotree_for_risky_strains-final.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
        "1773"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████| 3143529/3143529 [00:57<00:00, 54750.59it/s]\n"
+      "100%|████████████████████████████████████████████████████| 3143529/3143529 [01:18<00:00, 39901.94it/s]\n"
      ]
     }
    ],
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,16 +787,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Tree node 'Inner1771' (0x7f7bac15031)"
+       "Tree node 'Inner1771' (0x7f0c5a24c09)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +993,7 @@
        "[68 rows x 5 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1215,7 @@
        "[68 rows x 5 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1253,7 @@
       " \\rowcolor{Blue1!30}A/swine/Minnesota/A02245643/2020 &H3N2&EPI1769178&EPI1769179&6.4370&6.4631\\\\\r\n",
       " \\rowcolor{Red3!20}A/swine/Iowa/A02479005/2020 &H1N1&EPI1777621&EPI1777622&6.4103&6.4297\\\\\r\n",
       " \\rowcolor{Blue1!30}A/swine/Iowa/A02524874/2020 &H3N2&EPI1907838&EPI1907839&6.3836&6.3962\\\\\r\n",
-      " \\rowcolor{Red3!20}A/swine/Indiana/A02636526/2022 &H1N1&EPI2148186&EPI2148187&6.3830&6.3954\\\\\r\n",
+      " \\rowcolor{Red3!20}A/swine/Indiana/A02636638/2022 &H1N1&EPI2153370&EPI2153371&6.3830&6.3954\\\\\r\n",
       " \\rowcolor{Blue1!30}A/swine/Illinois/A02479007/2020 &H3N2&EPI1777629&EPI1777630&6.3769&6.3877\\\\\r\n",
       " \\rowcolor{Blue1!30}A/swine/Spain/44579-1/2020 &H3N2&EPI1930744&EPI1930748&6.3737&6.3838\\\\\r\n",
       " \\rowcolor{Red3!20}A/swine/Minnesota/A02248037/2021 &H1N1&EPI1912188&EPI1912189&6.3694&6.3784\\\\\r\n",
@@ -1287,9 +1287,9 @@
       " \\rowcolor{Red3!20}A/swine/Iowa/A02479229/2020 &H1N1&EPI1775914&EPI1775915&6.3574&6.3633\\\\\r\n",
       " \\rowcolor{Red3!20}A/swine/Iowa/A02479303/2020 &H1N1&EPI1768639&EPI1768640&6.3567&6.3625\\\\\r\n",
       " \\rowcolor{Red3!20}A/swine/Minnesota/A02710691/2021 &H1N1&EPI2146090&EPI2146091&6.3561&6.3618\\\\\r\n",
-      " \\rowcolor{Red3!20}A/swine/Iowa/A02635881/2021 &H1N1&EPI1911668&EPI1911669&6.3560&6.3616\\\\\r\n",
       " \\rowcolor{Red3!20}A/swine/Iowa/A02525354/2021 &H1N1&EPI1910789&EPI1910790&6.3560&6.3616\\\\\r\n",
-      " \\rowcolor{Red3!20}A/swine/Iowa/A02524808/2020 &H1N1&EPI1907251&EPI1907252&6.3543&6.3595\\\\\r\n",
+      " \\rowcolor{Red3!20}A/swine/Iowa/A02635881/2021 &H1N1&EPI1911668&EPI1911669&6.3560&6.3616\\\\\r\n",
+      " \\rowcolor{Red3!20}A/swine/Iowa/A02524968/2020 &H1N1&EPI1908419&EPI1908420&6.3543&6.3595\\\\\r\n",
       " \\rowcolor{Red3!20}A/swine/Iowa/A02635823/2021 &H1N1&EPI1911263&EPI1911264&6.3543&6.3594\\\\\r\n",
       " \\rowcolor{Blue1!30}A/swine/Minnesota/A02711797/2022 &H3N2&EPI2153382&EPI2153383&6.3537&6.3587\\\\\r\n",
       " \\rowcolor{Red3!20}A/swine/Iowa/A02479141/2020 &H1N1&EPI1780241&EPI1780242&6.3531&6.3579\\\\\r\n",
@@ -1297,8 +1297,8 @@
       " \\rowcolor{Red3!20}A/swine/Iowa/A02750621/2022 &H1N1&EPI2161576&EPI2161577&6.3509&6.3552\\\\\r\n",
       " \\rowcolor{Blue1!30}A/swine/Illinois/A02525253/2021 &H3N2&EPI1910375&EPI1910376&6.3506&6.3548\\\\\r\n",
       " \\rowcolor{Red3!20}A/swine/Iowa/A02245587/2020 &H1N1&EPI1775817&EPI1775818&6.3497&6.3537\\\\\r\n",
-      " \\rowcolor{Red3!20}A/swine/Iowa/A02636114/2021 &H1N1&EPI1931853&EPI1931854&6.3487&6.3525\\\\\r\n",
       " \\rowcolor{Red3!20}A/swine/Iowa/A02525217/2021 &H1N1&EPI1909087&EPI1909088&6.3487&6.3525\\\\\r\n",
+      " \\rowcolor{Red3!20}A/swine/Iowa/A02636114/2021 &H1N1&EPI1931853&EPI1931854&6.3487&6.3525\\\\\r\n",
       " \\rowcolor{Red3!20}A/swine/Iowa/A02636145/2021 &H1N1&EPI1932055&EPI1932930&6.3487&6.3525\\\\\r\n",
       " \\rowcolor{Red3!20}A/swine/Iowa/A02636496/2022 &H1N1&EPI2148086&EPI2148087&6.3485&6.3522\\\\\r\n",
       " \\rowcolor{Red3!20}A/swine/Iowa/A02635871/2021 &H1N1&EPI1911656&EPI1911657&6.3473&6.3507\\\\\r\n",
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1408,6 +1408,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>6.0</th>\n",
        "      <th>6.2</th>\n",
        "      <th>6.3</th>\n",
        "      <th>6.4</th>\n",
@@ -1417,15 +1418,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>H1N1</th>\n",
-       "      <td>56</td>\n",
+       "      <td>62</td>\n",
+       "      <td>57</td>\n",
        "      <td>53</td>\n",
        "      <td>5</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>H3N2</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
        "      <td>4</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1435,9 +1438,11 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>H9N2</th>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1448,11 +1453,11 @@
        "</div>"
       ],
       "text/plain": [
-       "      6.2  6.3  6.4  6.5\n",
-       "H1N1   56   53    5    4\n",
-       "H3N2    5    5    4    1\n",
-       "H7N9    1    1    1    1\n",
-       "H9N2    1    0    0    0"
+       "      6.0  6.2  6.3  6.4  6.5\n",
+       "H1N1   62   57   53    5    4\n",
+       "H3N2   11   11   11    4    1\n",
+       "H7N9    1    1    1    1    1\n",
+       "H9N2    1    1    0    0    0"
       ]
      },
      "metadata": {},
@@ -1462,7 +1467,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "65\n"
+      "75\n"
      ]
     },
     {
@@ -1602,7 +1607,7 @@
        "6049                6.278700                   6.264578  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1611,7 +1616,7 @@
     "count=0\n",
     "Subtype={'H1N1':0,'H3N2':0,'H7N9':0,'H9N2':0}\n",
     "MaxriskStrain={'H1N1':None,'H3N2':None,'H7N9':None,'H9N2':None}\n",
-    "Subtype_strat={ 6.2:{'H1N1':0,'H3N2':0,'H7N9':0,'H9N2':0},              6.3:{'H1N1':0,'H3N2':0,'H7N9':0,'H9N2':0},\n",
+    "Subtype_strat={ 6.0:{'H1N1':0,'H3N2':0,'H7N9':0,'H9N2':0},  6.2:{'H1N1':0,'H3N2':0,'H7N9':0,'H9N2':0},              6.3:{'H1N1':0,'H3N2':0,'H7N9':0,'H9N2':0},\n",
     "               6.4:{'H1N1':0,'H3N2':0,'H7N9':0,'H9N2':0},6.5:{'H1N1':0,'H3N2':0,'H7N9':0,'H9N2':0}}\n",
     "for node in ltree_collapsed:\n",
     "    Subtype[node.subtype]=Subtype[node.subtype]+1\n",
@@ -1622,7 +1627,7 @@
     "        if MaxriskStrain[node.subtype][1]<ALLinfoHA.seq_infos[node.name.split()[0]].erisk:\n",
     "            MaxriskStrain[node.subtype]=(ALLinfoHA.seq_infos[node.name.split()[0]].name,\n",
     "                                         ALLinfoHA.seq_infos[node.name.split()[0]].erisk)\n",
-    "    for r in [6.2,6.3,6.4,6.5]:\n",
+    "    for r in [6.0, 6.2,6.3,6.4,6.5]:\n",
     "        if r<ALLinfoHA.seq_infos[node.name.split()[0]].erisk:\n",
     "            #print(node.subtype,ALLinfoHA.seq_infos[node.name.split()[0]].erisk)\n",
     "            Subtype_strat[r][node.subtype]=Subtype_strat[r][node.subtype]+1\n",
@@ -1638,21 +1643,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r--. 1 ishanu ishanu 164K Nov 21 19:01 ha.fasta\r\n",
-      "-rw-r--r--. 1 ishanu ishanu  569 Nov 21 20:37 EPI1818137.fasta\r\n",
-      "-rw-r--r--. 1 ishanu ishanu  569 Nov 21 20:37 EPI1818121.fasta\r\n",
-      "-rw-r--r--. 1 ishanu ishanu  569 Nov 21 20:37 EPI2161544.fasta\r\n",
-      "-rw-r--r--. 1 ishanu ishanu  569 Nov 21 20:37 EPI2026200.fasta\r\n"
+      "\\begin{tabular}{L{.75in}|L{.25in}|L{.60in}|L{.6in}|L{.6in}|L{.6in}}\\hline\r\n",
+      "subtype&6.0&6.2&6.3&6.4&6.5\\\\\r\n",
+      "H1N1&62&57&53&5&4\\\\\r\n",
+      "H3N2&11&11&11&4&1\\\\\r\n",
+      "H7N9&1&1&1&1&1\\\\\r\n",
+      "H9N2&1&1&0&0&0\\\\\r\n",
+      "\\hline\\end{tabular}\r\n"
      ]
     }
    ],
+   "source": [
+    "from zedstat.textable import textable\n",
+    "Subtype_strat_df.columns=[str(x) for x in Subtype_strat_df.columns]\n",
+    "Subtype_strat_df.index.name='subtype'\n",
+    "Subtype_strat_df=Subtype_strat_df.reset_index()\n",
+    "textable(Subtype_strat_df,#pd.concat([highrisknamesdf1.head(30),highrisknamesdf1.tail(10)]),\n",
+    "         tabname='../../../tex/Figures/tabdata/riskycount.tex',\n",
+    "         FORMAT='%1.4f',INDEX=False,\n",
+    "         TABFORMAT='L{.75in}|L{.25in}|L{.60in}|L{.6in}|L{.6in}|L{.6in}',LNTERM='\\\\\\\\\\n')\n",
+    "! cat ../../../tex/Figures/tabdata/riskycount.tex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def write_fasta(seqs, fasta_file, wrap=80):\n",
     "    \"\"\"Write sequences to a fasta file.\n",
@@ -1672,11 +1696,47 @@
     "            for i in range(0, len(gseq), wrap):\n",
     "                f.write('{}\\n'.format(gseq[i:i + wrap])) \n",
     "\n",
-    "for i,name in zip(df[df.id.isin(maxriskdf.iloc[0,:].values)].ha.values,\n",
-    "                 df[df.id.isin(maxriskdf.iloc[0,:].values)].ha_accession.values):\n",
-    "    write_fasta({name:i},name+'.fasta')\n",
-    "    \n",
-    "! ls -lhtr *fasta"
+    "#for i,name in zip(df[df.id.isin(maxriskdf.iloc[0,:].values)].ha.values,\n",
+    "#                 df[df.id.isin(maxriskdf.iloc[0,:].values)].ha_accession.values):\n",
+    "#    write_fasta({name:i},name+'.fasta')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FASTANAME='../../../tex/Figures/plotdata/seqanal/risky4.fasta'\n",
+    "FASTAFILES={name+'('+subtype+')':i for i,name,subtype in zip(df[df.id.isin(maxriskdf.iloc[0,:].values)].ha.values,\n",
+    "                 df[df.id.isin(maxriskdf.iloc[0,:].values)].ha_accession.values,\n",
+    "                 df[df.id.isin(maxriskdf.iloc[0,:].values)].subtype.values)}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "human_dom_seq='../../../qnet_predictions/results/dominant_sequences_2021_2022.csv'\n",
+    "domf=pd.read_csv(human_dom_seq,index_col=0)\n",
+    "domf=domf.assign(subtype=[x.split('_')[1].upper() for x in domf.index.values],protein=[x.split('_')[2].upper() for x in domf.index.values])\n",
+    "domf=domf[domf.protein=='HA'].head(2)\n",
+    "DOMFILES={'DOM_HUMAN'+'('+subtype+')':i for i,name,subtype in zip(domf.sequence.values,\n",
+    "                 domf.name.values,\n",
+    "                 domf.subtype.values)}\n",
+    "DOMFILES.update(FASTAFILES)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_fasta(DOMFILES,FASTANAME)"
    ]
   },
   {
@@ -2751,7 +2811,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
