--- a/tex/Figures/tabdata/highrisk35.tex
+++ b/tex/Figures/tabdata/highrisk35.tex
@@ -10,6 +10,54 @@ strain&subtype& HA  accession & NA  accession & predicted  IRAT  impact & predic
  \rowcolor{Blue1!30}A/swine/Italy/56910/2020 &H3N2&EPI2142217&EPI2142173&6.4537&6.4840\\
  \rowcolor{Blue1!30}A/swine/Minnesota/A02245643/2020 &H3N2&EPI1769178&EPI1769179&6.4370&6.4631\\
  \rowcolor{Red3!20}A/swine/Iowa/A02479005/2020 &H1N1&EPI1777621&EPI1777622&6.4103&6.4297\\
+ \rowcolor{Blue1!30}A/swine/Iowa/A02524874/2020 &H3N2&EPI1907838&EPI1907839&6.3836&6.3962\\
+ \rowcolor{Red3!20}A/swine/Indiana/A02636638/2022 &H1N1&EPI2153370&EPI2153371&6.3830&6.3954\\
+ \rowcolor{Blue1!30}A/swine/Illinois/A02479007/2020 &H3N2&EPI1777629&EPI1777630&6.3769&6.3877\\
+ \rowcolor{Blue1!30}A/swine/Spain/44579-1/2020 &H3N2&EPI1930744&EPI1930748&6.3737&6.3838\\
+ \rowcolor{Red3!20}A/swine/Minnesota/A02248037/2021 &H1N1&EPI1912188&EPI1912189&6.3694&6.3784\\
+ \rowcolor{Blue1!30}A/swine/Minnesota/A02245699/2020 &H3N2&EPI1833007&EPI1833008&6.3692&6.3781\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02635917/2021 &H1N1&EPI1911753&EPI1911754&6.3687&6.3774\\
+ \rowcolor{Red3!20}A/swine/Minnesota/A02711801/2022 &H1N1&EPI2153420&EPI2153421&6.3674&6.3759\\
+ \rowcolor{Red3!20}A/swine/Illinois/A02635936/2021 &H1N1&EPI1911791&EPI1911792&6.3671&6.3754\\
+ \rowcolor{Red3!20}A/swine/South\_Dakota/A02524453/2020 &H1N1&EPI1765555&EPI1765556&6.3658&6.3738\\
+ \rowcolor{Red3!20}A/swine/Minnesota/A02248061/2021 &H1N1&EPI1912494&EPI1912495&6.3624&6.3696\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02636439/2022 &H1N1&EPI2147475&EPI2147476&6.3616&6.3686\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02524875/2020 &H1N1&EPI1907858&EPI1907859&6.3610&6.3678\\
+ \rowcolor{Red3!20}A/swine/Minnesota/A02248060/2021 &H1N1&EPI1912500&EPI1912501&6.3592&6.3656\\
+ \rowcolor{Red3!20}A/swine/Nebraska/A02636117/2021 &H1N1&EPI1932937&EPI1932938&6.3582&6.3644\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02524513/2020 &H1N1&EPI1832647&EPI1832648&6.3580&6.3641\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02635719/2021 &H1N1&EPI1910907&EPI1910908&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Nebraska/A02479337/2020 &H1N1&EPI1769116&EPI1769117&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02479383/2020 &H1N1&EPI1771027&EPI1771028&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Nebraska/A02479212/2020 &H1N1&EPI1775884&EPI1775885&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Minnesota/A02245424/2020 &H1N1&EPI1780207&EPI1780208&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Minnesota/A02479051/2020 &H1N1&EPI1778572&EPI1778573&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02524646/2020 &H1N1&EPI1817164&EPI1817165&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02524724/2020 &H1N1&EPI1818387&EPI1818388&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02524892/2020 &H1N1&EPI1907881&EPI1907882&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Nebraska/A02524954/2020 &H1N1&EPI1908393&EPI1908394&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02524994/2020 &H1N1&EPI1908427&EPI1908428&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Missouri/A02524951/2020 &H1N1&EPI1908429&EPI1908430&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Missouri/A02525065/2021 &H1N1&EPI1908581&EPI1908582&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02525313/2021 &H1N1&EPI1910761&EPI1910762&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Nebraska/A02479186/2020 &H1N1&EPI1774141&EPI1774142&6.3578&6.3638\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02479156/2020 &H1N1&EPI1780249&EPI1780250&6.3574&6.3634\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02479229/2020 &H1N1&EPI1775914&EPI1775915&6.3574&6.3633\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02479303/2020 &H1N1&EPI1768639&EPI1768640&6.3567&6.3625\\
+ \rowcolor{Red3!20}A/swine/Minnesota/A02710691/2021 &H1N1&EPI2146090&EPI2146091&6.3561&6.3618\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02525354/2021 &H1N1&EPI1910789&EPI1910790&6.3560&6.3616\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02635881/2021 &H1N1&EPI1911668&EPI1911669&6.3560&6.3616\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02524968/2020 &H1N1&EPI1908419&EPI1908420&6.3543&6.3595\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02635823/2021 &H1N1&EPI1911263&EPI1911264&6.3543&6.3594\\
+ \rowcolor{Blue1!30}A/swine/Minnesota/A02711797/2022 &H3N2&EPI2153382&EPI2153383&6.3537&6.3587\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02479141/2020 &H1N1&EPI1780241&EPI1780242&6.3531&6.3579\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02635965/2021 &H1N1&EPI1912220&EPI1912221&6.3516&6.3561\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02750621/2022 &H1N1&EPI2161576&EPI2161577&6.3509&6.3552\\
+ \rowcolor{Blue1!30}A/swine/Illinois/A02525253/2021 &H3N2&EPI1910375&EPI1910376&6.3506&6.3548\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02245587/2020 &H1N1&EPI1775817&EPI1775818&6.3497&6.3537\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02525217/2021 &H1N1&EPI1909087&EPI1909088&6.3487&6.3525\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02636114/2021 &H1N1&EPI1931853&EPI1931854&6.3487&6.3525\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02636145/2021 &H1N1&EPI1932055&EPI1932930&6.3487&6.3525\\
  \rowcolor{Red3!20}A/swine/Iowa/A02636496/2022 &H1N1&EPI2148086&EPI2148087&6.3485&6.3522\\
  \rowcolor{Red3!20}A/swine/Iowa/A02635871/2021 &H1N1&EPI1911656&EPI1911657&6.3473&6.3507\\
  \rowcolor{Red3!20}A/swine/Iowa/A02479067/2020 &H1N1&EPI1778734&EPI1778735&6.3469&6.3501\\
