--- a/tex/Figures/tabdata/irat_predictions.tex
+++ b/tex/Figures/tabdata/irat_predictions.tex
@@ -1,5 +1,5 @@
-\begin{tabular}{L{1.32in}|L{.35in}|L{.3in}|L{.3in}|L{.3in}|L{.35in}|L{.35in}|L{.35in}|L{.35in}|L{.32in}|L{.3in}|L{.3in}}\hline
-Influenza Virus & Subype & IRAT Date &IRAT Emergence Score &IRAT Impact Score &HA Qnet Sample &NA Qnet Sample &HA Avg. Q-dist. &NA Avg. Q-dist. &Geom. Mean&Qnet Emergence Score&Qnet Impact Score \\\hline
+\begin{tabular}{L{1.25in}|L{.35in}|L{.3in}|L{.3in}|L{.3in}|L{.35in}|L{.35in}|L{.35in}|L{.35in}|L{.32in}|L{.3in}|L{.3in}}\hline
+Influenza Virus & Subype & IRAT Date &IRAT Emergence Score &IRAT Impact Score &HA Sample &NA Sample &HA Avg. \qdist &NA Avg. \qdist &Geom. Mean&\enet Emergence Score&\enet Impact Score \\\hline
  A/swine/Shandong/1207/2016 &H1N1& Jul  2020 &7.5&6.9&1000&1000&0.0941&0.0205&0.0440&6.0&6.2\\\hline
  A/Ohio/13/2017 &H3N2& Jul  2019 &6.6&5.8&1000&1000&0.0184&0.0306&0.0238&6.3&6.2\\\hline
  A/Hong  Kong/125/2017 &H7N9& May  2017 &6.5&7.5&437&437&0.0296&0.0058&0.0131&6.6&6.5\\\hline
@@ -7,14 +7,14 @@ Influenza Virus & Subype & IRAT Date &IRAT Emergence Score &IRAT Impact Score &H
  A/Anhui-Lujiang/39/2018 &H9N2& Jul  2019 &6.2&5.9&31&30&0.0290&0.1681&0.0698&5.2&5.0\\\hline
  A/Indiana/08/2011 &H3N2& Dec  2012 &6.0&4.5&1000&1000&0.0523&0.0091&0.0218&6.4&6.5\\\hline
  A/California/62/2018 &H1N2& Jul  2019 &5.8&5.7&55&55&0.1089&0.0610&0.0815&5.4&5.5\\\hline
- A/Bangladesh/0994/2011$^{\star\star\star}$ &H9N2& Feb  2014 &5.6&5.4&-1&-1&0.2078&0.1823&0.1947&4.3&4.9\\\hline
+ A/Bangladesh/0994/2011$^{\star\star\star}$ &H9N2& Feb  2014 &5.6&5.4&&&0.2078&0.1823&0.1947&4.3&4.9\\\hline
  A/Sichuan/06681/2021 &H5N6& Oct  2021 &5.3&6.3&45&45&0.3616&0.0518&0.1369&5.2&6.4\\\hline
  A/Vietnam/1203/2004 &H5N1& Nov  2011 &5.2&6.6&258&246&0.1673&0.0111&0.0430&6.2&6.7\\\hline
  A/Yunnan/14564/2015$^{\star\star}$ &H5N6& Apr  2016 &5.0&6.6&344&331&0.3482&0.2987&0.3225&4.9&6.5\\\hline
  A/Astrakhan/3212/2020$^{\star\star}$ &H5N8& Mar  2021 &4.6&5.2&381&365&0.1603&0.3472&0.2359&3.9&4.4\\\hline
  A/Netherlands/219/2003 &H7N7& Jun  2012 &4.6&5.8&46&46&0.2757&0.3521&0.3115&4.6&5.8\\\hline
  A/American  wigeon/South  Carolina/AH0195145/2021 &H5N1& Mar  2022 &4.4&5.1&335&323&0.1722&0.5114&0.2967&4.0&4.7\\\hline
- A/Jiangxi-Donghu/346/2013$^{\star\star\star}$ &H10N8& Feb  2014 &4.3&6.0&-1&-1&0.2088&0.2101&0.2094&4.3&4.8\\\hline
+ A/Jiangxi-Donghu/346/2013$^{\star\star\star}$ &H10N8& Feb  2014 &4.3&6.0&&&0.2088&0.2101&0.2094&4.3&4.8\\\hline
  A/gyrfalcon/Washington/ 41088/2014$^{\star\star}$ &H5N8& Mar  2015 &4.2&4.6&341&328&0.1532&0.3424&0.2290&3.9&4.3\\\hline
  A/Northern  pintail/ Washington/40964/2014$^{\star\star}$ &H5N2& Mar  2015 &3.8&4.1&341&328&0.1529&0.3799&0.2410&3.9&4.3\\\hline
  A/canine/Illinois/12191/2015 &H3N2& Jun  2016 &3.7&3.7&1000&1000&0.0607&0.1509&0.0957&4.9&4.8\\\hline
@@ -22,5 +22,5 @@ Influenza Virus & Subype & IRAT Date &IRAT Emergence Score &IRAT Impact Score &H
  A/turkey/Indiana/1573-2/2016$^{\star\star}$ &H7N8& Jul  2017 &3.4&3.9&495&494&0.1130&0.7738&0.2957&3.4&3.9\\\hline
  A/chicken/Tennessee/17-007431-3/2017 &H7N9& Oct  2017 &3.1&3.5&496&495&0.1027&0.2569&0.1624&4.1&4.2\\\hline
  A/chicken/Tennessee/17-007147-2/2017 &H7N9& Oct  2017 &2.8&3.5&496&495&0.2095&0.2541&0.2307&4.2&4.8\\\hline
- A/duck/New  York/1996 $^\star$&H1N1& Nov  2011 &2.3&2.4&1000&1000&-1&-1&-1&-1&-1\\\hline
+% A/duck/New  York/1996 $^\star$&H1N1& Nov  2011 &2.3&2.4&1000&1000&-1&-1&-1&-1&-1\\\hline
  \end{tabular}
